03-networking/network-policy/egress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-net-policy
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: nginx
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: allowed
  ## Allow all DSS egress traffic
  - to:
    ports:
    - protocol: UDP
      port: 53
