03-networking/network-policy/ingress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-net-policy
spec:
  policyTypes:
  - Ingress
  podSelector:  # To which pods apply the policy (empty for all the pods in the namespace)
    matchLabels:
      app: nginx
  ingress:
  - from:
    # - ipBlock:  # IP range to restrict access to
    #   cidr: 196.168.1.0/24
    #   except:  # IP allowed
    #   - 192.168.1.57
    # - namespaceSelector:  # Restrict to given namespace
    #     matchLabels:
    #       project: default
    - podSelector:
        matchLabels:
          app: allowed  # Restrict pods with given label
    ports:  # list of allowed ports
    - protocol: TCP
      port: 80
